--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </section>
 
             <!-- Projects -->
-            <section id="projects" class="collapsible" data-aos="fade-up" data-aos-delay="200">
+            <!-- <section id="projects" class="collapsible" data-aos="fade-up" data-aos-delay="200">
                 <h2 class="section-title">PROJECTS <i class="fa-solid fa-angle-up"></i></h2>
                 <div class="section-body">
                     <div class="row g-5">
@@ -190,7 +190,7 @@
                                 <div class="p-3">
                                     <a href="#">
                                         <strong>Speckleplethysmography Device </strong>
-                                        <p class="mb-0 first">Mark Boyher, Charlie Vuong, Hung Cao</p>
+                                        <!-- <p class="mb-0 first">Mark Boyher, Charlie Vuong, Hung Cao</p>
                                         <br>
                                         <p>Wearable Speckleplethysmography Device for Continuous, Non-Invasive Blood Pressure Monitoring</p>
                                     </a>
@@ -208,7 +208,7 @@
                                 <div class="p-3">
                                     <a href="#">
                                         <strong>RheoMap (CHI25) </strong>
-                                        <p class="mb-0 first">Charlie Vuong, and Cesar Torres</p>
+                                        <!-- <p class="mb-0 first">Charlie Vuong, and Cesar Torres</p>
                                         <br>
                                         <p>Mapping Inks, Gels, Pastes, and Slurries within a Rheological Embedding Space using Retraction-Extrusion Pressure Sensor Vectors</p>
                                     </a>
@@ -226,7 +226,7 @@
                                 <div class="p-3">
                                     <a href="https://www.glassart.org/membership/conference-journals/">
                                         <strong>Tacit Captions (GAS2025)</strong>
-                                        <p class="mb-0 first">Lejun Liao, Rohita Konjeti, Charlie Vuong, and Cesar Torres</p>
+                                        <!-- <p class="mb-0 first">Lejun Liao, Rohita Konjeti, Charlie Vuong, and Cesar Torres</p>
                                         <br>
                                         <p>Externalizing Tacit Skills within Neon Glass Bending Practices through Sensor-Video Synchronized Cues</p>
                                     </a>
@@ -244,7 +244,7 @@
                                 <div class="p-3">
                                     <a href="https://ieeexplore.ieee.org/document/9871884">
                                         <strong>ECG Denoising with EnKF (EMBC 2022)</strong>
-                                        <p class="mb-0 first">Sadaf Sarafan, Charlie Vuong, Michael P.H. Lau, Tadesse Ghirmai, and Hung Cao</p>
+                                        <!-- <p class="mb-0 first">Sadaf Sarafan, Charlie Vuong, Michael P.H. Lau, Tadesse Ghirmai, and Hung Cao</p>
                                         <br>
                                         <p>Applying EnKF for Denoising ECG Signals, alongside a Comparative Analysis of Various Filtering Algorithms</p>
                                     </a>
@@ -262,7 +262,7 @@
                                 <div class="p-3">
                                     <a href="#">
                                         <strong>Wearable Rodent EEG </strong>
-                                        <p class="mb-0 first">Xing Xia, Charlie Vuong, Tai Le and Hung Cao</p>
+                                        <!-- <p class="mb-0 first">Xing Xia, Charlie Vuong, Tai Le and Hung Cao</p>
                                         <br>
                                         <p>Implemented BLE Firmware and Designed Hardware for Biopotential Acquisition for Analyzing Local Field Potentials in Rodents.</p>
                                     </a>
@@ -280,9 +280,109 @@
                                 <div class="p-3">
                                     <a href="https://doi.org/10.1115/DMD2020-9054">
                                         <strong>Team Magicoil (DMD2020)</strong>
-                                        <p class="mb-0 first">Vinit Kumar Chugh, Kai Wu, Abilash Nair, Charlie Vuong, and Jian-Ping Wang</p>
+                                        <!-- <p class="mb-0 first">Vinit Kumar Chugh, Kai Wu, Abilash Nair, Charlie Vuong, and Jian-Ping Wang</p>
                                         <br>
                                         <p>Magnetic Particle Spectroscopy-Based Handheld Device for Wash-Free, Easy-to-Use, and Solution-Phase Immunoassay Applications</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section> -->
+            
+            <!-- Projects -->
+            <section id="projects" class="collapsible" data-aos="fade-up" data-aos-delay="200">
+                <h2 class="section-title">PROJECTS <i class="fa-solid fa-angle-up"></i></h2>
+                <div class="section-body">
+                    <div class="row g-5">
+
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 220px; overflow: hidden;">
+                                    <a href="#">
+                                        <img src="img/hero_lab/spg.png" alt="project" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="#">
+                                        <strong>Speckleplethysmography Device </strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 220px; overflow: hidden;">
+                                    <a href="https://dl.acm.org/doi/10.1145/3706598.3713835">
+                                        <img src="img/rheomap.png" alt="project" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="#">
+                                        <strong>RheoMap (CHI25) </strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 220px; overflow: hidden;">
+                                    <a href="#">
+                                        <img src="img/neonbending.png_ha.png" alt="project" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="https://www.glassart.org/membership/conference-journals/">
+                                        <strong>Tacit Captions (GAS2025)</strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 220px; overflow: hidden;">
+                                    <a href="#">
+                                        <img src="img/hero_lab/ECG_EnKF.png" alt="project" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="https://ieeexplore.ieee.org/document/9871884">
+                                        <strong>ECG Denoising with EnKF (EMBC 2022)</strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 220px; overflow: hidden;">
+                                    <a href="#">
+                                        <img src="img/hero_lab/rodent2.png" alt="project" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="#">
+                                        <strong>Wearable Rodent EEG </strong>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 220px; overflow: hidden;">
+                                    <a href="#">
+                                        <img src="img/Magicoil.png" alt="project" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="https://doi.org/10.1115/DMD2020-9054">
+                                        <strong>Team Magicoil (DMD2020)</strong>
                                     </a>
                                 </div>
                             </div>
