--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                     </a>
                                 </div>
                                 <div class="p-3">
-                                    <a href="#">
+                                    <a href="https://dl.acm.org/doi/10.1145/3706598.3713835">
                                         <strong>RheoMap (CHI25) </strong>
                                     </a>
                                 </div>
@@ -330,7 +330,7 @@
                         <div class="col-md-4">
                             <div class="project-card">
                                 <div class="project-thumb" style="height: 220px; overflow: hidden; background-color: #f5f5f5;">
-                                    <a href="#">
+                                    <a href="https://www.glassart.org/membership/conference-journals/">
                                         <img src="img/neonbending.png_ha.png" alt="project" style="width: 100%; height: 100%; object-fit: contain;">
                                     </a>
                                 </div>
@@ -345,7 +345,7 @@
                         <div class="col-md-4">
                             <div class="project-card">
                                 <div class="project-thumb" style="height: 220px; overflow: hidden; background-color: #f5f5f5;">
-                                    <a href="#">
+                                    <a href="https://ieeexplore.ieee.org/document/9871884">
                                         <img src="img/hero_lab/ECG_EnKF.png" alt="project" style="width: 100%; height: 100%; object-fit: contain;">
                                     </a>
                                 </div>
@@ -375,7 +375,7 @@
                         <div class="col-md-4">
                             <div class="project-card">
                                 <div class="project-thumb" style="height: 220px; overflow: hidden; background-color: #f5f5f5;">
-                                    <a href="#">
+                                    <a href="https://doi.org/10.1115/DMD2020-9054">
                                         <img src="img/Magicoil.png" alt="project" style="width: 100%; height: 100%; object-fit: contain;">
                                     </a>
                                 </div>
