--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </div>
 
     <div class="blog-list">
-        <small>Blog</small>
+        <small>News</small>
         <ul class="list-unstyled mt-2">
             <li class="mb-2"><small><strong>October 2025</strong> – <a href="#">You are welcome to attend my PhD seminar</a></small></li>
             <li class="mb-2"><small><strong>November 2025</strong> – <a href="#">Selected to attend the 80% seminar</a></small></li>
